# ident-util

./: Cargo.toml  README.md
examples/: basic.rs
src/: lib.rs
tests/: nameof_type_2015_edition.rs  nameof_type_2018_edition.rs
